# aegis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOGO_PROMPT.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
aegis/: __init__.py  core.py
capguard/: __init__.py  a2a.py  adapters.py  approval.py  audit.py  audit_graph.py  cli.py  core.py  identity.py  mcp_guard.py  mcp_proxy.py  memory.py  monitor.py  packs.py  policy_dsl.py  policy_sync.py  provenance.py  registry.py  runtime.py  sandbox.py  taskscope.py
capguard/bench/: agentdojo_adapter.py  harness.py  live_agentdojo.py  run_agentdojo.py  run_bench.py  run_live_agentdojo.py  suite_agentdojo_like.py
capguard/bench/fixtures/: banking.json  slack.json  travel.json  workspace.json
capguard_cloud/: __init__.py  app.py  store.py
docs/: BENCHMARK_RESULTS.md  ENHANCEMENT_PLAN_2026H1.md  PR_01_core_hardening.md  PR_02_mcp_and_approvals.md  PR_03_mcp_proxy.md  PR_04_sandbox.md  STRATEGY.md  cli.md  index.md  mcp-proxy.md  quickstart.md
examples/: demo_comparison.py  demo_local_no_api.py  demo_with_aegis.py  echo_mcp_server.py  quickstart_aegis.py  run_proxy.py
tests/: test_a2a.py  test_adapters.py  test_aegis_simple.py  test_agentdojo_adapter.py  test_audit_graph.py  test_bench.py  test_capguard.py  test_cli.py  test_cloud_app.py  test_identity.py  test_init.py  test_live_agentdojo.py  test_mcp_and_approval.py  test_mcp_proxy.py  test_memory.py  test_monitor.py  test_packaging_metadata.py  test_packs.py  test_policy_sync.py  test_properties.py  test_provenance.py  test_run_live_agentdojo_cli.py  test_sandbox.py  test_taskscope.py
