[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisguard"
version = "0.2.0"
description = "Aegis: universal AI agent security. One decorator, any framework, full protection. Deterministic capabilities, argument-level policy, data provenance, MCP guard, sandboxed execution, and tamper-evident audit."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Vamsi Sai Ranga Mangina", email = "44197358+harsha-mangena@users.noreply.github.com" }]
keywords = ["ai-agents", "security", "mcp", "least-privilege", "owasp", "capabilities", "prompt-injection", "agentic", "aegis", "guard", "agent-security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
# signed plugins / asymmetric (Ed25519) identity signing for cross-trust-domain use
crypto = ["cryptography>=43.0"]
identity = ["cryptography>=43.0"]
# YAML policy packs
yaml = ["pyyaml>=6.0"]
# live + real-AgentDojo benchmark adapter
agentdojo = ["agentdojo>=0.1"]
# docs site
docs = ["mkdocs-material>=9.5"]
# hosted control plane (FastAPI service + dashboard)
cloud = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.2", "hypothesis>=6.0", "ruff>=0.5", "build>=1.2", "twine>=5.1", "pyyaml>=6.0",
       "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
aegis = "capguard.cli:main"
aegis-bench = "capguard.bench.run_bench:main"
aegis-cloud = "capguard_cloud.app:main"

[project.urls]
Homepage = "https://github.com/harsha-mangena/capguard"
Repository = "https://github.com/harsha-mangena/capguard"
Documentation = "https://github.com/harsha-mangena/capguard#readme"
Changelog = "https://github.com/harsha-mangena/capguard/blob/main/CHANGELOG.md"
Issues = "https://github.com/harsha-mangena/capguard/issues"

[tool.setuptools.packages.find]
include = ["aegis*", "capguard*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
# E501 long lines (prose-y docstrings), E741 ambiguous name `l` (info-flow labels)
ignore = ["E501", "E741", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
# tests use terse handlers / broad raises by design
"tests/*" = ["B011", "B017", "E701", "E702", "E731"]
"capguard/bench/*" = ["E731"]
